--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,7 @@
 {% include custom/sidebarconfigs.html %}
 
 <ul id="mysidebar" class="nav">
+    <a class="closebtn">&times;</a>
     <li class="sidebarTitle">{{sidebar[0].product}} {{sidebar[0].version}}</li>
     {% for entry in sidebar %}
     {% for folder in entry.folders %}
