--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,6 +59,7 @@
 <div class="container">
     <div class="col-lg-12">&nbsp;</div>
     <!-- Content Row -->
+    <span class="opennav"><span>menu &nbsp;</span><i class="fa fa-arrow-right"></i></span>
     <div class="row">
         <!-- Sidebar Column -->
         <div class="col-md-3">
