--- a/css/mycustomstyles.css
+++ b/css/mycustomstyles.css
@@ -381,6 +381,10 @@ a.accordion-toggle, a.accordion-collapsed {
     font-weight: 900;
 }
 
+#mysidebar>li{
+    margin: 0;
+    border-bottom: 1px solid #fff;
+}
 
 .nav > li.active > a  {
     background-color: #347DBE;
@@ -873,18 +877,83 @@ span.soft {
     background-color: whitesmoke;
 }
 
+.opennav, #mysidebar .closebtn{
+    display: none;
+}
+
 @media (max-width: 767px) {
     .navbar-inverse .navbar-nav .open .dropdown-menu > li > a {
         color: #444;
     }
+    #search-input{
+        float: left;
+    }
+
+    .navbar-nav{
+        padding-bottom: 15px;
+    }
 }
 
+@media (max-width: 991px){
+    /* Side Nav for mobile */
+    /* The side navigation menu */
 
-@media (max-width: 991px) {
-
-    ul#mysidebar {
-        max-width: 100%;
+    .container{
         position: relative;
+    }
+    #mysidebar {
+        height: 100%; /* 100% Full-height */
+        width: 270px; /* 0 width - change this with JavaScript */
+        position: fixed; /* Stay in place */
+        z-index: 2000; /* Stay on top */
+        top: 0;
+        left: -270px;
+        background-color: #fff; /* Black*/
+        overflow-x: hidden; /* Disable horizontal scroll */
+        padding-top:0; /* Place content 60px from the top */
+        transition: 0.1s; /* 0.5 second transition effect to slide in the sidenav */
+        box-shadow: 3px 3px 5px rgba(0,0,0,0.2);
+    }
+
+    #mysidebar.active{
+        left: 0;
+    }
+
+    .opennav{
+        display: block;
+        position: fixed;
+        top: 57px;
+        left: 0;
+        z-index: 999;
+        cursor: pointer;
+        padding: 5px 10px;
+        border: 1px solid #efefef;
+        border-left: 0;
+        box-shadow: 3px 3px 5px rgba(0,0,0,0.2);
+        background: #ffffff;
+
+    }
+
+    .opennav span{
+        display: none;
+    }
+
+    /* Position and style the close button (top right corner) */
+    #mysidebar .closebtn {
+        position: absolute;
+        top: 0;
+        right: 25px;
+        font-size: 36px;
+        margin-left: 50px;
+        display: block;
+        cursor: pointer;
+
+    }
+
+    /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+    #main {
+        transition: margin-left .5s;
+        padding: 20px;
     }
 }
 
@@ -1239,4 +1308,9 @@ ul#mysidebar li li a{
 .navbar-nav li li a:hover{
     color: #f5f5f5;
 }
+
+
+
+
+
 
