--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,7 +53,7 @@
     {% endif %}
 
 </head>
-<body>
+<body class="screen{% if page.type == 'homepage' %} homepage{% elsif page.type == 'post-details' %} post-details{% elsif page.type == 'news' %} news{% endif %}">
 {% include topnav.html %}
 <!-- Page Content -->
 <div class="container">
@@ -63,10 +63,12 @@
     <div class="row">
         <!-- Sidebar Column -->
         <div class="col-md-3">
-
           {% include sidebar.html %}
+        <!-- sidebar for blog post -->
+            {% if page.type == 'post-details' %} {% include post_sidebar.html %} {% endif %}
+        <!-- end of sidebar for blog post -->
     <!-- Content Column -->
-    <div class="col-md-9">
+   <div class="col-md-9">
         {{content}}
     </div>
     <!-- /.row -->
