--- a/css/mycustomstyles.css
+++ b/css/mycustomstyles.css
@@ -1317,14 +1317,22 @@ body.news .container .row .col-md-9 , body.homepage .container .row .col-md-9{
     width: 100%;
 }
 
-body.post-details .post-list{
+body.post-details .post-list {
     width: 25%;
     float: left;
     position: relative;
     min-height: 1px;
     padding-right: 15px;
     padding-left: 15px;
+}
 
+pre{
+    padding: 15px 9.5px;
+    border-color: #f2f2f2
+}
+
+pre.highlight{
+    background: #f2f2f2;
 }
 
 
